# dotfiles

./: .buildinfo  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .hgtags  .travis.yml  CHANGELOG.rst  Dockerfile.debian13  Dockerfile.debian8  Dockerfile.fedora22  Dockerfile.fedora23  Dockerfile.fedora24  Dockerfile.fedora25  Dockerfile.fedora29  Dockerfile.fedora33  Dockerfile.fedora38  Dockerfile.fedora39  Dockerfile.fedora41  Dockerfile.fedora42  Dockerfile.fedora43  Dockerfile.fedora44  Dockerfile.ubuntu12.04  Dockerfile.ubuntu15.04  Dockerfile.ubuntu16.04  Dockerfile.ubuntu20.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu26.04  Home.rest  Home.rest.html  LICENSE  MANIFEST.in  Makefile  README.html  README.md  README.rst  _Footer.rest  _Footer.rest.html  _Sidebar.rest  (+56 more)
.devcontainer/: Dockerfile.fedora43  devcontainer.json
_modules/: collections  collections.html  dotfiles.html  index  index.html
_sources/: README.txt  api.rst.txt  api.txt  bash_conf.txt  changelog.txt  developing.rst.txt  dotfiles.cli.txt  dotfiles.venv.txt  dotvim_conf.txt  index.rst.txt  index.txt  index2.txt  license.rst.txt  tools.txt  usage.txt  usrlog.txt  venv.rst.txt  venv.txt
_static/: documentation_options.js
_templates/: links.html
debian/: changelog  control  rules
docs/: Makefile  Makefile.orig  Makefile.rej  api.rst  bash-vi-editing-mode-cheat-sheet.txt  bash.rst  bash_conf.rst  bash_conf.txt  changelog.rst  conf.py  dotfiles.cli.rst  dotfiles.venv.rst  dotvim_conf.rst  dotvim_conf.txt  i3_conf.txt  index.rst  install.rst  requirements.txt  tools.rst  usage.rst  (+3 more)
(+561 files in other folders)
